--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,8 @@ jobs:
 
       - name: Hello world action step
         id: hello
-        uses: youmengme/upload-lafyun@v0.0.7-test
-        with:
+        uses: youmengme/upload-lafyun@v0.0.8-test
+        env:
             USER_ACCOUNT: ${{ secrets.LAF_ACCOUNT }}
             PASSWORD: ${{ secrets.LAF_PASSWORD }}
             REGION: ${{ secrets.LAF_REGION }}
